--- a/wp-content/plugins/contact-form-7/includes/css/styles.css
+++ b/wp-content/plugins/contact-form-7/includes/css/styles.css
@@ -31,9 +31,9 @@ div.wpcf7-spam-blocked {
 	border: 2px solid #ffa500;
 }
 
-div.wpcf7-validation-errors {
+/* div.wpcf7-validation-errors {
 	border: 2px solid #f7e700;
-}
+} */
 
 span.wpcf7-form-control-wrap {
 	position: relative;
