--- a/wp-content/themes/infinite/css/style.css
+++ b/wp-content/themes/infinite/css/style.css
@@ -1193,3 +1193,18 @@ border-bottom:1px solid #000 !important;
 .SP_News_Widget  a {
 color:#000 !important;
 }
+.x1{
+	width: 100%;
+    background: #3a8ccb;
+    float: left;
+    box-shadow: inset 0px 3px 9px #114D7B;
+   padding: 20px 0px; 
+	color:#fff;
+}
+.x2 p{
+text-align:center;
+/* margin-top:14px; */
+}
+.x2 a{
+font-size:20px;
+}
